<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Base.ContainerWithoutPadding"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/Base.Wrapper.FullWidth"
        android:background="@color/soft_grey"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/Base.Wrapper.FullWidth"
            android:layout_height="@dimen/action_bar_size"
            android:orientation="horizontal" >

            <TextView
                style="@style/Base.Wrapper.LeftRightPadded"
                android:layout_gravity="center_vertical"
                android:text="@string/editing_time_entry"
                android:textAppearance="@style/BaseTextAppearance.Text"
                android:textColor="@color/grey" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/timer_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-7dp"
            android:layout_marginTop="-7dp"
            android:indeterminate="true"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/details_wrapper"
        style="@style/Base.Wrapper.FullWidth.LeftRightPadded"
        android:layout_marginTop="@dimen/unity"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/small_margin"
        android:paddingTop="@dimen/small_margin" >

        <RelativeLayout
            style="@style/Base.Wrapper.FullWidth"
            android:layout_height="@dimen/action_bar_size" >

            <ImageButton
                android:id="@+id/delete_time_entry"
                style="@style/Base.Wrapper"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:src="@drawable/ic_delete" />

            <TextView
                android:id="@+id/time"
                style="@style/Base.Wrapper"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/zero_time"
                android:textAppearance="@style/BaseTextAppearance.UltraBigText"
                android:textColor="@color/grey" />

            <ImageButton
                android:id="@+id/resume_time_entry"
                style="@style/Base.Wrapper"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:src="@drawable/ic_play" />
        </RelativeLayout>

        <EditText
            android:id="@+id/description"
            style="@style/Base.FullWidth.EditText.GreyBackground"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:hint="@string/timer_hint"
            android:inputType="textMultiLine"
            android:minHeight="@dimen/cell_size" />

        <Spinner
            android:id="@+id/project"
            style="@style/Base.FullWidth.Spinner.GreyBackground"
            android:layout_height="@dimen/big_medium_size"
            android:gravity="center_vertical"
            android:popupBackground="@color/soft_grey"
            android:textColor="@color/middle_text" />

        <LinearLayout
            style="@style/Base.Wrapper.FullWidth"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/date"
                style="@style/Base.FullWidth.EditText"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/medium_size"
                android:hint="@string/date"
                android:textSize="@dimen/megasmall_text" />

            <TextView
                style="@style/Base.Wrapper"
                android:layout_marginLeft="@dimen/small_margin"
                android:text="@string/from" />

            <TextView
                android:id="@+id/start_time"
                style="@style/Base.FullWidth.EditText"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/medium_size"
                android:layout_marginLeft="@dimen/small_margin"
                android:hint="@string/beginning"
                android:textSize="@dimen/megasmall_text" />

            <TextView
                style="@style/Base.Wrapper"
                android:layout_marginLeft="@dimen/small_margin"
                android:text="@string/to" />

            <TextView
                android:id="@+id/end_time"
                style="@style/Base.FullWidth.EditText"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/medium_size"
                android:layout_marginLeft="@dimen/small_margin"
                android:hint="@string/end"
                android:textSize="@dimen/megasmall_text" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>